force-app/main/default/objects/Vote__c/fields/Choice__c.field-meta.xml
<CustomField>
    <fullName>Choice__c</fullName>
    <description>Upvote and Downvote. This is auto-populated through Upvoting or Downvoting on the Salesforce Ticket page.</description>
    <inlineHelpText>Upvote and Downvote. This is auto-populated through Upvoting or Downvoting on the Salesforce Ticket page.</inlineHelpText>
    <label>Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upvote</fullName>
            </value>
            <value>
                <fullName>Downvote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>