force-app/main/default/objects/Vote__c/fields/Salesforce_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lookup identifies the Salesforce Ticket this Vote contributes to. This is auto-populated through Upvoting or Downvoting on the Salesforce Ticket page.</description>
    <inlineHelpText>The Lookup identifies the Salesforce Ticket this Vote contributes to. This is auto-populated through Upvoting or Downvoting on the Salesforce Ticket page.</inlineHelpText>
    <label>Salesforce Ticket</label>
    <referenceTo>Salesforce_Ticket__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>