force-app/main/default/objects/Vote__c/fields/Voter__c.field-meta.xml
<CustomField>
    <fullName>Voter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lookup identifies the User who submitted this Vote. This is auto-populated through Upvoting or Downvoting on the Salesforce Ticket page.</description>
    <inlineHelpText>The Lookup identifies the User who submitted this Vote. This is auto-populated through Upvoting or Downvoting on the Salesforce Ticket page.</inlineHelpText>
    <label>Voter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>