force-app/main/default/objects/Vote__c/validationRules/TriggerFaultPathErrorVote_DoNotDeploy.validationRule-meta.xml
<ValidationRule>
    <fullName>TriggerFaultPathErrorVote_DoNotDeploy</fullName>
    <active>false</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Your Fault Vote!</errorMessage>
</ValidationRule>